Began work on homepage handlebars, styled main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,6 +33,9 @@
         <p class="navItem">Backpack</p>
       </nav>
     </header>
+    <main>
+      {{{body}}}
+    </main>
     <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by Icons8</a>
   </body>
 </html>
