--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,6 @@ nav {
   padding: 2vh 0;
   border-bottom: 2px solid var(--dark-purple);
   background-color: var(--dark-green);
-  box-shadow: 0px 5px 10px var(--light-purple);
   align-items: center;
 }
 
@@ -37,7 +36,10 @@ nav form input {
 }
 
 main {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
   width: 100%;
+  background-color: var(--dark-green);
 }
 
 #productAd {
@@ -47,12 +49,12 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  margin: 3vh 15%;
+  margin: 0 15%;
+  margin-bottom: 5vh;
   font-size: 30px;
   font-family: var(--text-font);
-  border: 3px solid var(--dark-purple);
-  box-shadow: 5px 5px 10px var(--light-purple);
-  border-radius: 5px;
+  border: 2px solid var(--dark-purple);
+  border-radius: 10px;
   background-color: var(--lemon-meringue);
   color: var(--dark-purple);
 }
@@ -64,14 +66,42 @@ main {
 
 .featuredArea {
   margin-left: 20%;
+  margin-top: 10vh;
   width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.featuredProduct {
+.featuredProduct,
+.previousOrders {
   width: 25%;
+  text-align: center;
+  background-color: var(--lemon-meringue);
+  border: 2px solid var(--dark-purple);
+  border-radius: 10px;
+}
+
+.cardTitle {
+  border-bottom: 1px solid var(--dark-purple);
+}
+
+.cardTitleText {
+  color: var(--dark-purple);
+  font-size: 30px;
+  font-family: var(--title-font);
 }
 
 .cardImg img {
   height: auto;
   width: 100%;
+}
+
+.bodyText {
+  font-family: var(--text-font);
+  font-size: 20px;
+}
+
+.cardBody {
+  border-top: 1px solid var(--dark-purple);
 }
