--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,3 +24,61 @@
     </div>
   </div>
 {{/if}}
+<h2 class="categoryTitle">Categories</h2>
+<div class="categories">
+  <div class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Potions</h3>
+    </div>
+    <div class="cardImg">
+      <img src="./public/img/magic_potion.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">All your liquid needs!</p>
+    </div>
+  </div>
+  <div class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Weapons</h3>
+    </div>
+    <div class="cardImg">
+      <img src="./public/img/sword.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Poke Stab Slash Shoot!</p>
+    </div>
+  </div>
+  <div class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Shields and Armor</h3>
+    </div>
+    <div class="cardImg">
+      <img src="./public/img/shield.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Health Insurance not Included</p>
+    </div>
+  </div>
+  <div class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Magic Items</h3>
+    </div>
+    <div class="cardImg">
+      <img src="./public/img/magic_circle.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Wizard Approved</p>
+    </div>
+  </div>
+  <div class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Utility Items</h3>
+    </div>
+    <div class="cardImg">
+      <img src="./public/img/rope.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Put the Ball Bearings on Stairs</p>
+    </div>
+  </div>
+</div>
