--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,18 @@
-<form>
-  <label for="username">{{username}}</label><br />
-  <input type="text" id="username" name="userName" /><br />
-  <label for="password"> {{password}} </label><br />
-  <input type="text" id="password" name="passWord" />
-  <button type="submit">Login</button>
-</form>
+
+<div class="row justify-space-between-md">
+  <div class="login-card">
+    <h2 class="page-title">Login</h2>
+    <form class="form login-form">
+      <div class="form-group">
+        <label for="email-login">{{username}}</label>
+        <input class="form-input" type="text" id="email-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">{{password}}</label>
+        <input class="form-input" type="password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">login</button>
+      </div>
+    </form>
+  </div>
