Touched up homepage and main handelbars, finished product page handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,6 +36,16 @@
     <main>
       {{{body}}}
     </main>
-    <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by Icons8</a>
+    <footer>
+      <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by
+        Icons8</a>
+      <a href="https://pngtree.com/so/magic-clipart">magic clipart png from
+        pngtree.com</a>
+      <a href="https://pngtree.com/so/sword">sword png from pngtree.com</a>
+      <a href="https://pngtree.com/so/shield">shield png from pngtree.com</a>
+      <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by
+        Icons8</a>
+    </footer>
+
   </body>
 </html>
