--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,3 +139,59 @@ footer a {
   text-decoration: none;
   color: var(--dark-purple);
 }
+
+.productArea {
+  width: 70%;
+  margin-left: 15%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.productImageArea {
+  width: 50%;
+  background-color: var(--lemon-meringue);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--dark-purple);
+  border-radius: 20px;
+  margin-right: 10vw;
+}
+
+.productImageArea img {
+  width: 75%;
+  height: auto;
+}
+
+.productInfoArea {
+  width: 25%;
+  background-color: var(--lemon-meringue);
+  border: 2px solid var(--dark-purple);
+  border-radius: 20px;
+  padding: 2vh 2vw;
+}
+
+.productInfoArea h2 {
+  font-family: var(--title-font);
+}
+
+.productDescArea {
+  width: 90%;
+  background-color: var(--lemon-meringue);
+  border: 2px solid var(--dark-purple);
+  border-radius: 20px;
+  margin-top: 5vh;
+  font-family: var(--text-font);
+  padding: 2vh 2vw;
+}
+
+#productTitle {
+  width: 100%;
+  font-size: 40px;
+  font-family: var(--title-font);
+  color: var(--dark-purple);
+  text-align: center;
+  margin-bottom: 5vh;
+}
