--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
+<div id="productAd">
+  <img src="./public/img/magic_potion.png" alt="A purple healing potion" />
+  <p>Healing Potions by Shop a Lot Basics</p>
+  <img src="./public/img/magic_potion.png" alt="A purple healing potion" />
+</div>
 {{#if loggedIn}}
   <div class="featuredArea">
     <div class="featuredProduct">
