--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -24,7 +24,7 @@
         <img src="./public/img/magic_potion.png" alt="A healing potion" />
       </div>
       <div class="cardBody">
-        <p class="bodyText">Placed 06/02/2021</p>
+        <p class="bodyText">Placed {{last_purchase}}</p>
       </div>
     </div>
   </div>
