--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,13 +1,23 @@
 <div class="productArea">
-  <h1 id="productTitle">Product Title</h1>
+  <h1 id="productTitle">{{product.product_name}}</h1>
   <div class="productImageArea">
-    <img src="./public/img/shield.png" alt="An image of a shield" />
+    <img
+      src="./public/img/{{product.category}}.png"
+      alt="An image of a shield"
+    />
   </div>
   <div class="productInfoArea">
-    <h2>Product Area</h2>
-    <p>Product Tag</p>
+    <h2>{{product.product_name}}</h2>
+    <p>{{product.category}}</p>
+    <p>{{product.stock}}</p>
+    <p>{{product.cost}}</p>
   </div>
   <div class="productDescArea">
-    <p>Product description area</p>
+    <p>{{product.description}}</p>
+    <ul>
+      {{#each product.additional_information}}
+        <li>{{formatAddedData(this)}}</li>
+      {{/each}}
+    </ul>
   </div>
 </div>
