--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,17 +20,17 @@
   <body>
     <header>
       <nav>
-        <h3 class="navItem" id="pageTitle">Shop A Lot</h3>
-        <p class="navItem">Hot Sales</p>
-        <p class="navItem">Browse Categories</p>
+        <a href="/"><h3 class="navItem" id="pageTitle">Shop A Lot</h3></a>
+        <a href="/product/potion"><p class="navItem">Hot Sales</p></a>
+        <a href="/browse"><p class="navItem">Browse Categories</p></a>
         <div id="searchArea" class="navItem">
           <form action="" method="get">
             <input type="text" id="productSearch" name="productSearch" />
             <button type="submit">Search</button>
           </form>
         </div>
-        <p class="navItem">Login</p>
-        <p class="navItem">Backpack</p>
+        <a href="/login"><p class="navItem">Login</p></a>
+        <a href="/backpack"><p class="navItem">Backpack</p></a>
       </nav>
     </header>
     <main>
@@ -46,6 +46,5 @@
       <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by
         Icons8</a>
     </footer>
-
   </body>
 </html>
