--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,10 @@
   --dark-green: #6c756b;
 }
 
+a {
+  text-decoration: none;
+}
+
 nav {
   display: flex;
   flex-direction: row;
@@ -228,4 +232,51 @@ footer a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+.backpackArea {
+  background-color: var(--lemon-meringue);
+  width: 60%;
+  height: 800px;
+  margin-left: 20%;
+}
+
+.backpackArea h1 {
+  font-family: var(--title-font);
+  font-size: 40px;
+  text-align: center;
+  padding-top: 3vh;
+  width: 80%;
+  margin-left: 10%;
+}
+
+.backpackArea p {
+  font-family: var(--text-font);
+  font-size: 20px;
+  padding-bottom: 2vh;
+  border-bottom: 2px solid var(--dark-purple);
+  text-align: center;
+  width: 80%;
+  margin-left: 10%;
+}
+
+.productList {
+  width: 100%;
+  height: 100%;
+}
+
+.productList ul {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 80%;
+}
+
+.productList li {
+  width: 30%;
+  padding: 3vh 0;
+  text-align: center;
+  text-decoration: none;
+  list-style: none;
 }
