--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,15 +1,17 @@
 <div class="productRenderArea"></div>
-{{#each product as|product|}}
+{{#each products as|product|}}
+    <a href="/product/{{product.id}}">
     <div class="productCard">
         <div class="cardHeader">
             <h3>{{product.product_name}}</h3>
         </div>
         <div class="cardBody">
-            <img src="./public/img/"+{{product-type}}+".png" alt="The product image" />
+            <img src="{{product.image_link}}" alt="The product image" />
         </div>
         <div class="cardFooter">
             <p>{{product.product_name}} - {{product.cost}}</p>
         </div>
     </div>
+    </a>
 {{/each}}
 </div>
