fixed homepage to render properly

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -31,43 +31,37 @@
 {{/if}}
 <h2 class="categoryTitle">Categories</h2>
 <div class="categories">
-  <a href="/1">
-    <div class="categoryCard">
-      <div class="cardtitle">
-        <h3 class="cardTitleText">Weapons</h3>
-      </div>
-      <div class="cardImg">
-        <img src="/img/sword.png" alt="A healing potion" />
-      </div>
-      <div class="cardBody">
-        <p class="bodyText">Poke Stab Slash Shoot!</p>
-      </div>
+  <a href="/1" class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Weapons</h3>
+    </div>
+    <div class="cardImg">
+      <img src="/img/sword.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Poke Stab Slash Shoot!</p>
     </div>
   </a>
-  <a href="/2">
-    <div class="categoryCard">
-      <div class="cardtitle">
-        <h3 class="cardTitleText">Shields and Armor</h3>
-      </div>
-      <div class="cardImg">
-        <img src="/img/shield.png" alt="A healing potion" />
-      </div>
-      <div class="cardBody">
-        <p class="bodyText">Health Insurance not Included</p>
-      </div>
+  <a href="/2" class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Shields and Armor</h3>
+    </div>
+    <div class="cardImg">
+      <img src="/img/shield.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Health Insurance not Included</p>
     </div>
   </a>
-  <a href="/3">
-    <div class="categoryCard">
-      <div class="cardtitle">
-        <h3 class="cardTitleText">Gear</h3>
-      </div>
-      <div class="cardImg">
-        <img src="/img/rope.png" alt="A healing potion" />
-      </div>
-      <div class="cardBody">
-        <p class="bodyText">Everything else AND the kitchen sink!</p>
-      </div>
+  <a href="/3" class="categoryCard">
+    <div class="cardtitle">
+      <h3 class="cardTitleText">Gear</h3>
+    </div>
+    <div class="cardImg">
+      <img src="/img/rope.png" alt="A healing potion" />
+    </div>
+    <div class="cardBody">
+      <p class="bodyText">Everything else AND the kitchen sink!</p>
     </div>
   </a>
 </div>
