--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,15 +1,15 @@
 <div class="productRenderArea"></div>
-{{#each products as|product|}}
-    <a href="/product/{{product.id}}">
+{{#each products as |product|}}
+    <a href="/product/{{product_id}}">
     <div class="productCard">
         <div class="cardHeader">
-            <h3>{{product.product_name}}</h3>
+            <h3>{{product_name}}</h3>
         </div>
         <div class="cardBody">
-            <img src="{{product.image_link}}" alt="The product image" />
+            <img src="{{image_link}}" alt="The product image" />
         </div>
         <div class="cardFooter">
-            <p>{{product.product_name}} - {{product.cost}}</p>
+            <p>{{product_name}} - {{cost}}</p>
         </div>
     </div>
     </a>
