workded on the product page - can't get the css to pull in.

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,37 +1,35 @@
+{{product}}
+
 <div class="productArea">
-  <h1 id="productTitle">{{product.product_name}}</h1>
+  <h1 id="productTitle">{{product_name}}</h1>
   <div class="productImageArea">
-    <img
-      src="./public/img/{{product.category}}.png"
-      alt="An image of a shield"
-    />
+    <img src="img/{{category}}.png" alt="An image of a shield" />
   </div>
   <div class="productInfoArea">
-    <h2 id="product_name">{{product.product_name}}</h2>
-    <p>{{product.category}}</p>
-    <p>{{product.stock}}</p>
-    <p id="cost">{{product.cost}}</p>
+    <h2 id="product_name">{{product_name}}</h2>
+    <p>{{category}}</p>
+    <p>{{stock}}</p>
+    <p id="cost">{{cost}}</p>
   </div>
   <div class="productDescArea">
-    <p>{{product.description}}</p>
+    <p>{{description}}</p>
     <ul>
-      {{#each product.additional_information}}
+      {{#each additional_information}}
         <li>{{formatAddedData this}}</li>
       {{/each}}
     </ul>
   </div>
 </div>
 
-<form id="{{product.prod_id}}">
+<form id="{{prod_id}}">
   <label for="quantity">quantity</label>
-  <input
-    type="range"
-    id="quantity"
-    name="quantity"
-    min="1"
-    max="{{product.stock}}"
-  />
+  <input type="range" id="quantity" name="quantity" min="1" max="{{stock}}" />
   <button type="submit">Add To Cart </button>
 
 </form>
-<script src="/js/product.js"> </script>
+
+<!-- <script
+  src="https://unpkg.com/ing-simple-cart@1.0.21/index.js"
+  type="text/javascript"
+></script>
+<script src="/js/product.js"> </script> -->
