fixed product page not rendering CSS. Added pagination to get category ID route through reusable helper (doPagination(req.query)).

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,9 +1,9 @@
-{{product}}
+{{{product}}}
 
 <div class="productArea">
   <h1 id="productTitle">{{product_name}}</h1>
   <div class="productImageArea">
-    <img src="img/{{category}}.png" alt="An image of a shield" />
+    <img src="/img/{{category.category_name}}.png" alt="An image of a shield" />
   </div>
   <div class="productInfoArea">
     <h2 id="product_name">{{product_name}}</h2>
