fixed seeds and json datatype - product page displays - helper still not working

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -11,7 +11,7 @@
   <div class="productDescArea">
     <p>{{description}}</p>
     <ul>
-      {{#formatAddedData add_info}}
+      {{#formatAddedData additional_information}}
         <li>{{property}}: {{value}}</li>
       {{/formatAddedData}}
     </ul>
