Add to cart works in local storage, added out of stock warning

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -366,3 +366,8 @@ footer {
   align-items: center;
   border-top: 2px solid var(--dark-purple);
 }
+
+.stockWarn {
+  color: red;
+  font-family: var(--text-font);
+}
