--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,7 @@
         </div>
         <a href="/login"><p class="navItem">Login</p></a>
         <a href="/backpack"><p class="navItem">Backpack</p></a>
+        <a href="/cart"><p class="navItem">Cart</p></a>
       </nav>
     </header>
     <main>
