--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,8 +320,7 @@ footer a {
 .cart {
   font-family: var(--title-font);
   font-size: 40px;
-  margin-left: 10%;
-  margin-bottom: 3%;
+  text-align: center;
 }
 
 .singleItem {
@@ -370,4 +369,15 @@ footer {
 .stockWarn {
   color: red;
   font-family: var(--text-font);
+}
+
+#sendToBackpack {
+  margin-left: 45%;
+  width: 10%;
+  margin-top: 3%;
+  padding: 1% 1%;
+  border-radius: 20px;
+  font-size: 25px;
+  background-color: var(--lemon-meringue);
+  color: var(--dark-purple);
 }
