Created frontend framework to send cart to backend

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,5 +1,5 @@
 <div class="productArea">
-  <h1 id="productTitle">{{product_name}}</h1>
+  <h1 id="productTitle" data-id="{{product_id}}">{{product_name}}</h1>
   <div class="productImageArea">
     <img src="/img/{{category.category_name}}.png" alt="An image of a shield" />
   </div>
