cleaned up navbar

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,7 +30,7 @@
   </div>
 {{/if}}
 <h2 class="categoryTitle">Categories</h2>
-<div class="categories">
+<div class="categories" id="categories">
   <a href="/category/1" class="categoryCard">
     <div class="cardtitle">
       <h3 class="cardTitleText">Weapons</h3>
