trying to git pull

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,8 +30,8 @@
   </div>
 {{/if}}
 <h2 class="categoryTitle">Categories</h2>
-<div class="categories">
-  <a href="/1" class="categoryCard">
+<div class="categories" id="categories">
+  <a href="/category/1" class="categoryCard">
     <div class="cardtitle">
       <h3 class="cardTitleText">Weapons</h3>
     </div>
@@ -42,7 +42,7 @@
       <p class="bodyText">Poke Stab Slash Shoot!</p>
     </div>
   </a>
-  <a href="/2" class="categoryCard">
+  <a href="/category/2" class="categoryCard">
     <div class="cardtitle">
       <h3 class="cardTitleText">Shields and Armor</h3>
     </div>
@@ -53,7 +53,7 @@
       <p class="bodyText">Health Insurance not Included</p>
     </div>
   </a>
-  <a href="/3" class="categoryCard">
+  <a href="/category/3" class="categoryCard">
     <div class="cardtitle">
       <h3 class="cardTitleText">Gear</h3>
     </div>
