--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,7 @@
 
 a {
   text-decoration: none;
+  color: var(--dark-purple);
 }
 
 nav {
@@ -320,8 +321,7 @@ footer a {
 .cart {
   font-family: var(--title-font);
   font-size: 40px;
-  margin-left: 10%;
-  margin-bottom: 3%;
+  text-align: center;
 }
 
 .singleItem {
@@ -365,4 +365,20 @@ footer {
   justify-content: space-between;
   align-items: center;
   border-top: 2px solid var(--dark-purple);
+}
+
+.stockWarn {
+  color: red;
+  font-family: var(--text-font);
+}
+
+#sendToBackpack {
+  margin-left: 45%;
+  width: 10%;
+  margin-top: 3%;
+  padding: 1% 1%;
+  border-radius: 20px;
+  font-size: 25px;
+  background-color: var(--lemon-meringue);
+  color: var(--dark-purple);
 }
