--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,7 @@
     <header>
       <nav>
         <a href="/"><h3 class="navItem" id="pageTitle">Shop A Lot</h3></a>
-        <a href="/product/potion"><p class="navItem">Hot Sales</p></a>
-        <a href="/browse"><p class="navItem">Browse Categories</p></a>
+        <a href="/#categories"><p class="navItem">Browse Categories</p></a>
         <div id="searchArea" class="navItem">
           <form action="" method="get">
             <input type="text" id="productSearch" name="productSearch" />
@@ -31,6 +30,7 @@
         </div>
         <a href="/login"><p class="navItem">Login</p></a>
         <a href="/backpack"><p class="navItem">Backpack</p></a>
+        <a href="/cart"><p class="navItem">Cart</p></a>
       </nav>
     </header>
     <main>
