--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,12 +1,27 @@
 <div class="productArea">
-  <h1 id="productTitle">{{product_name}}</h1>
+  <h1 id="productTitle" data-id="{{product_id}}">{{product_name}}</h1>
   <div class="productImageArea">
     <img src="/img/{{category.category_name}}.png" alt="An image of a shield" />
   </div>
   <div class="productInfoArea">
     <h2 id="product_name">{{product_name}}</h2>
-    <p>{{category.category_name}}</p>
-    <p id="cost">cost: {{cost}} gp</p>
+    <h3>Tag:</h3>
+    <p id="category_name">{{category.category_name}}</p>
+    <h3>Cost (GP):</h3>
+    <p id="cost">{{cost}}</p>
+    <form id="quantityForm">
+      <label for="quantity">Quantity Desired</label>
+      <input
+        type="range"
+        id="quantity"
+        name="quantity"
+        min="1"
+        max="{{stock}}"
+        onchange="updateText(this.value)"
+      />
+      <input type="text" id="textInput" name="textInput" disabled="true" />
+      <button type="submit">Add To Cart </button>
+    </form>
   </div>
   <div class="productDescArea">
     <p>{{description}}</p>
@@ -18,15 +33,4 @@
   </div>
 </div>
 
-<form id="{{prod_id}}">
-  <label for="quantity">quantity</label>
-  <input type="range" id="quantity" name="quantity" min="1" max="{{stock}}" />
-  <button type="submit">Add To Cart </button>
-
-</form>
-
-<!-- <script
-  src="https://unpkg.com/ing-simple-cart@1.0.21/index.js"
-  type="text/javascript"
-></script>
-<script src="/js/product.js"> </script> -->
+<script src="/js/cart.js"></script>
