--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">Username:</label>
+        <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
@@ -17,4 +17,4 @@
     </form>
   </div>
 
-  <script src="../public/js/login.js"></script>
+  <script src="/js/login.js"></script>
