finished mvp for search bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         <a href="/product/potion"><p class="navItem">Hot Sales</p></a>
         <a href="/browse"><p class="navItem">Browse Categories</p></a>
         <div id="searchArea" class="navItem">
-          <form action="" method="get">
+          <form class="search-form" id = "search">
             <input type="text" id="productSearch" name="productSearch" />
             <button type="submit">Search</button>
           </form>
@@ -47,5 +47,6 @@
       <a href="https://icons8.com/icon/MfxutvOVx8n4/castle">Castle icon by
         Icons8</a>
     </footer>
+    <script src="/js/searchBar.js"></script>
   </body>
 </html>
