--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,36 +1,40 @@
 <div class="productArea">
-  <h1 id="productTitle" data-id="{{product_id}}">{{product_name}}</h1>
-  <div class="productImageArea">
-    <img src="/img/{{category.category_name}}.png" alt="An image of a shield" />
-  </div>
-  <div class="productInfoArea">
-    <h2 id="product_name">{{product_name}}</h2>
-    <h3>Tag:</h3>
-    <p id="category_name">{{category.category_name}}</p>
-    <h3>Cost (GP):</h3>
-    <p id="cost">{{cost}}</p>
-    <form id="quantityForm">
-      <label for="quantity">Quantity Desired</label>
-      <input
-        type="range"
-        id="quantity"
-        name="quantity"
-        min="1"
-        max="{{stock}}"
-        onchange="updateText(this.value)"
-      />
-      <input type="text" id="textInput" name="textInput" disabled="true" />
-      <button type="submit">Add To Cart </button>
-    </form>
-  </div>
-  <div class="productDescArea">
-    <p>{{description}}</p>
-    <ul>
-      {{#formatAddedData additional_information}}
-        <li>{{property}}: {{value}}</li>
-      {{/formatAddedData}}
-    </ul>
-  </div>
+  {{#if noProductFound}}
+    <h1 id="productTitle" data-id="{{product_id}}">No Product was found.</h1>
+  {{else}}
+    <h1 id="productTitle" data-id="{{product_id}}">{{product_name}}</h1>
+    <div class="productImageArea">
+      <img src="{{image_link}}" alt="{{image_alt_text}}" />
+    </div>
+    <div class="productInfoArea">
+      <h2 id="product_name">{{product_name}}</h2>
+      <h3>Tag:</h3>
+      <p id="category_name">{{category.category_name}}</p>
+      <h3>Cost (GP):</h3>
+      <p id="cost">{{cost}}</p>
+      <form id="quantityForm">
+        <label for="quantity">Quantity Desired</label>
+        <input
+          type="range"
+          id="quantity"
+          name="quantity"
+          min="1"
+          max="{{stock}}"
+          onchange="updateText(this.value)"
+        />
+        <input type="text" id="textInput" name="textInput" disabled="true" />
+        <button type="submit">Add To Cart </button>
+      </form>
+    </div>
+    <div class="productDescArea">
+      <p>{{description}}</p>
+      <ul>
+        {{#formatAddedData additional_information}}
+          <li>{{property}}: {{value}}</li>
+        {{/formatAddedData}}
+      </ul>
+    </div>
+  {{/if}}
 </div>
 
 <script src="/js/cart.js"></script>
