--- a/views/backpack.handlebars
+++ b/views/backpack.handlebars
@@ -2,10 +2,15 @@
   <h1>Backpack</h1>
   <p>Purchase History</p>
   <div class="productList">
-    <ul>
-      {{#each items as |item|}}
-        <li>{{item.product_name}}</li>
-      {{/each}}
-    </ul>
+    {{#if noProductFound}}
+      <p>There is nothing in your backpack! You need to go shopping!!!</p>
+      <a href="/"><button>Go Shopping</button></a>
+    {{else}}
+      <ul>
+        {{#each items as |item|}}
+          <li>{{item.product_name}}</li>
+        {{/each}}
+      </ul>
+    {{/if}}
   </div>
 </div>
