--- a/views/newUsers.handlebars
+++ b/views/newUsers.handlebars
@@ -6,11 +6,14 @@
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
       </div>
+         <div class="form-group">
+        <label for="password-signup">Password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
       <div class="form-group">
         <label for="email-signup">Email:</label>
         <input class="form-input" type="text" id="email-signup" />
       </div>
-      
       <div class="form-group">
         <label for="character-signup">Character Name & Level:</label>
         <input class="form-input" type="text" id="character-signup" />
@@ -19,14 +22,12 @@
         <label for="characterLevel-signup">Character Level:</label>
         <input class="form-input" type="text" id="characterLevel-signup" />
       </div> --}}
-      <div class="form-group">
+      {{!-- commented out address, we are not using this for anything --}}
+      {{!-- <div class="form-group">
         <label for="address-signup">Address:</label>
         <input class="form-input" type="text" id="address-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
+      </div> --}}
+      
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
@@ -34,4 +35,4 @@
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/js/newUsers.js"></script>
