--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,23 @@
+<head>
+  <link rel="stylesheet" href="/css/user.css" />
+</head>
 
-<div class="row justify-space-between-md">
-  <div class="login-card">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group">
+<div class="loginRenderArea">
+  <div class="">
+    <h2 class="title">Login</h2>
+    <form id="login-form" class="card">
+      <div class="formRow">
         <label for="email-login">Email:</label>
-        <input class="form-input" type="text" id="email-login" />
+        <input class="" type="text" id="email-login" />
       </div>
-      <div class="form-group">
+      <div class="formRow">
         <label for="password-login">Password:</label>
-        <input class="form-input" type="password" id="password-login" />
+        <input class="" type="password" id="password-login" />
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+      <div class="formRow">
+        <button class="" type="submit">login</button>
       </div>
     </form>
   </div>
-
-  <script src="/js/login.js"></script>
+</div>
+<script src="/js/login.js"></script>
