--- a/public/css/user.css
+++ b/public/css/user.css
@@ -19,12 +19,19 @@
   align-items: center;
 }
 
-.formRow {
+.form-group {
   margin: 0.5rem;
 }
 
 label {
   margin-right: 0.2rem;
+}
+
+.muted {
+  font-size: 1rem;
+  text-align: center;
+  margin: 0;
+  margin-top: 0.2rem;
 }
 
 @media screen and (min-width: 456px) {
