--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,19 +3,22 @@
 </head>
 
 <div class="loginRenderArea">
-  <div class="">
+  <div>
     <h2 class="title">Login</h2>
+
     <form id="login-form" class="card">
-      <div class="formRow">
+      <div class="form-group">
         <label for="email-login">Email:</label>
-        <input class="" type="text" id="email-login" />
+        <input name="email-login" type="text" id="email-login" />
       </div>
-      <div class="formRow">
+
+      <div class="form-group">
         <label for="password-login">Password:</label>
-        <input class="" type="password" id="password-login" />
+        <input name="password-login" type="password" id="password-login" />
       </div>
-      <div class="formRow">
-        <button class="" type="submit">login</button>
+
+      <div class="form-group">
+        <button type="submit">login</button>
       </div>
     </form>
   </div>
