--- a/views/newUsers.handlebars
+++ b/views/newUsers.handlebars
@@ -1,35 +1,38 @@
+<head>
+  <link rel="stylesheet" href="/css/user.css" />
+</head>
 
-  <div class="login-card">
-    <h1 class="page-title">Signup</h1>
-    <form class="form signup-form">
+<div class="loginRenderArea">
+  <div>
+    <h1 class="title">Sign Up</h1>
+
+    <form id="signup-form" class="card">
       <div class="form-group">
         <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
+        <input name="username-signup" type="text" id="username-signup" />
       </div>
-         <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
+
       <div class="form-group">
         <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <input name="email-signup" type="text" id="email-signup" />
       </div>
+
       <div class="form-group">
-        <label for="character-signup">Character Name & Level:</label>
-        <input class="form-input" type="text" id="character-signup" />
+        <label for="password-signup">Password:</label>
+        <input name="password-signup" type="password" id="password-signup" />
+        <br />
+        <p class="muted">Password must be at least 8 characters long</p>
       </div>
-      {{!-- <div class="form-group">
-        <label for="characterLevel-signup">Character Level:</label>
-        <input class="form-input" type="text" id="characterLevel-signup" />
-      </div> --}}
-      {{!-- commented out address, we are not using this for anything --}}
-      {{!-- <div class="form-group">
-        <label for="address-signup">Address:</label>
-        <input class="form-input" type="text" id="address-signup" />
-      </div> --}}
-      
+
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <label for="character-signup">
+          Character Name:
+        </label>
+        <input name="character-signup" type="text" id="character-signup" />
+      </div>
+
+      <div class="form-group">
+        <button type="submit">Sign Up</button>
       </div>
     </form>
   </div>
