--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -13,7 +13,7 @@
       <h3>Cost (GP):</h3>
       <p id="cost">{{cost}}</p>
       <form id="quantityForm">
-        <label for="quantity">Quantity Desired</label>
+        <label for="quantity" id="sliderLabel">Quantity Desired</label>
         <input
           type="range"
           id="quantity"
