Fixed cart, backpack functionality and tweaked homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
   <p>Healing Potions by Shop a Lot Basics</p>
   <img src="/img/magic_potion.png" alt="A purple healing potion" />
 </div>
-{{#if loggedIn}}
+{{#if logged_in}}
   <div class="featuredArea">
     <div class="featuredProduct">
       <div class="cardtitle">
