random homepage item displays correctly and is tied to session

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,8 +11,8 @@
       </div>
       <div class="cardImg">
         <img
-          src="/img/{{random_prod.product_image}}"
-          alt="Featured item for user"
+          src="{{random_prod.image_link}}"
+          alt="{{random_prod.image_alt_text}}"
         />
       </div>
       <div class="cardBody">
