--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,8 @@
-<div id="productAd">
+<a href="/product/329" id="productAd">
   <img src="/img/magic_potion.png" alt="A purple healing potion" />
   <p>Healing Potions by Shop a Lot Basics</p>
   <img src="/img/magic_potion.png" alt="A purple healing potion" />
-</div>
+</a>
 {{#if logged_in}}
   <div class="featuredArea">
     <a href="/product/{{random_prod.product_id}}" class="featuredProduct">
